// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not double import React + JSX 1`] = `
"import React, { Component, PropTypes } from 'react';

class MyElement extends Component {
  static propTypes = {
    name: PropTypes.string.isRequired
  };

  render() {
    return React.createElement(\\"div\\", null, this.props.name);
  }

}"
`;

exports[`Handles naming collisions 1`] = `
"import _Promise4 from \\"promise\\";

var _Promise;

_Promise4.resolve(foo).then(console.log);

{
  let _Promise2;

  _Promise4.resolve(foo).then(console.log);
}

function foo() {
  var _Promise3;

  _Promise4.resolve(foo).then(console.log);
}"
`;

exports[`Imports Promise 1`] = `
"import _Promise from \\"promise\\";

_Promise.resolve(foo).then(console.log);"
`;

exports[`Imports React + JSX 1`] = `
"import { Component as _Component } from \\"react\\";
import _React from \\"react\\";
import { PropTypes as _PropTypes } from \\"react\\";

class MyElement extends _Component {
  static propTypes = {
    name: _PropTypes.string.isRequired
  };

  render() {
    return _React.createElement(\\"div\\", null, this.props.name);
  }

}"
`;

exports[`Imports React 1`] = `
"import { Component as _Component } from \\"react\\";
import { PropTypes as _PropTypes } from \\"react\\";

class MyElement extends _Component {
  static propTypes = {
    name: _PropTypes.string.isRequired
  };

  render() {
    return <div>{this.props.name}</div>;
  }

}"
`;

exports[`JSX Elements 1`] = `
"import { Match as _Match } from \\"react-router\\";
import _React from \\"react\\";

const element = _React.createElement(\\"div\\", null, _React.createElement(\\"ul\\", null, _React.createElement(\\"li\\", null, _React.createElement(Link, {
  to: \\"/\\"
}, \\"Home\\")), _React.createElement(\\"li\\", null, _React.createElement(Link, {
  to: \\"/about\\"
}, \\"About\\")), _React.createElement(\\"li\\", null, _React.createElement(Link, {
  to: \\"/topics\\"
}, \\"Topics\\"))), _React.createElement(\\"hr\\", null), _React.createElement(_Match, {
  exactly: true,
  pattern: \\"/\\",
  component: Home
}), _React.createElement(_Match, {
  pattern: \\"/about\\",
  component: About
}), _React.createElement(_Match, {
  pattern: \\"/topics\\",
  component: Topics
}));"
`;

exports[`Still imports Promise when we use transform runtime after 1`] = `
"import _Promise from \\"promise\\";

_Promise.resolve(foo).then(console.log);"
`;

exports[`Still imports Promise when we use transform runtime first 1`] = `
"import _Promise from \\"promise\\";

_Promise.resolve(foo).then(console.log);"
`;
